linux/1014
root@kali:~# gedit test101.py
root@kali:~# python3 test1.py
hello!
89.4
abcdef
ant
root@kali:~# gedit test102.py
root@kali:~# python3 test102.py
1 / 2 = 0.5
1/2=0.5
root@kali:~# gedit test103.py
root@kali:~# python3 test103.py
Where do you live? 
I live in Boston. 
root@kali:~# gedit test104.py
root@kali:~# python3 test104.py
Where do you live? 
!
I hear it's nice there!
root@kali:~# gedit test105.py
root@kali:~# python test105.py
Enter a number to find the square of: 
Traceback (most recent call last):
  File "test105.py", line 1, in <module>
    num = int(input ("Enter a number to find the square of: "))
  File "<string>", line 0
    
    ^
SyntaxError: unexpected EOF while parsing
root@kali:~# gedit test106.py
root@kali:~# python test106.py
Enter a number: 123
Enter another number: 12
(123.0, '*', 12.0, '=', 1476.0)
root@kali:~# 
root@kali:~# 
